--- a/.github/workflows/duckstation.yml
+++ b/.github/workflows/duckstation.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
+          submodules: true
           fetch-depth: 0 # Ensure the full repository is checked out
 
       - name: Generate Self-Signed Certificate
@@ -109,7 +110,7 @@ jobs:
         shell: pwsh
        
       - name: Upload Build Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.inputs.package_name }} Build
           path: ${{ env.PackageOutputRootDir }}\${{ env.PACKAGE_NAME }}.zip
